@@ -8,7 +8,7 @@ AUTHOR = u"European Environment Agency"
 DEFAULT_ADD_CONTENT_PERMISSION = "Add portal content"
 COPYRIGHTS = u'(c) Copyrights - EEA (European Environment Agency)'
 
-#Obligations vocabulary
+# Obligations vocabulary
 ROD_SERVER = 'http://rod.eionet.europa.eu/rpcrouter'
 SOCKET_TIMEOUT = 5.0  # in seconds
 
